--- a/src/pages/methods/methods.html
+++ b/src/pages/methods/methods.html
@@ -1,8 +1,8 @@
-<ion-header>
+<ion-header class="headerbg">
     <ion-navbar>
         <ion-row>
-            <ion-col col-xl-2 col-lg-2 col-md-2 col-sm-2 col-2 class="padding-horizontal">
-                <img class="left_img_header" src="assets/imgs/fb-icon-logo.png" float-left>
+            <ion-col col-xl-2 col-lg-2 col-md-2 col-sm-2 col-2 class="padding-horizontal" (click)="gotoDashboard();">
+                <img class="left_img_header" src="assets/imgs/back.png" height="35px" float-left>
                 <!-- <ion-icon  name="md-arrow-round-back" (click)="gotoDashboard();"></ion-icon> -->
             </ion-col>
             <ion-col col-xl-8 col-lg-8 col-md-8 col-sm-8 col-8 class="vertical_align_middle">
@@ -17,158 +17,192 @@
 </ion-header>
 
 <ion-content>
-    <!-- <ion-grid>
-        <ion-list>
-            <ion-item *ngFor="let getMethods of allMethods" (click)="gotoTopicsListPage(getMethods)" text-wrap>
-                <ion-avatar item-start class="circle">
-                    <img src="{{getMethods.TabletIconURL}}">
-                </ion-avatar>
-                {{getMethods.MethodName}}
-                <ion-icon name="ios-arrow-forward" item-end></ion-icon><br>
-            </ion-item>
-        </ion-list>
-    </ion-grid> -->
+  <ion-grid>
+    <ion-row text-center>
+        <ion-col col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 no-padding>
+            <h4 class="txtalignstart" no-margin margin-top>SPACING</h4>
+        </ion-col>
+    </ion-row>
+    <ion-row justify-content-center align-items-center class="height100">
+      <ion-col col6 class="height-100">
+        <ion-card class="cl1 height100">
+          <ion-card-content class="height100">
+            <ion-row justify-content-center align-items-center class="height100">
+              <ion-col col-12 class="height-100p">
+                <div class="cdiv">
+                    <p>
+                        <img src="assets/imgs/counceling.png" class="img3" />
+                    </p>
+                    <div class="txt-content">
+                      <span float-left>DMPA</span>
+                      <span float-right>
+                          <ion-icon name="arrow-round-forward"></ion-icon>
+                      </span>
+                    </div>
+                </div>
+              </ion-col>
+            </ion-row>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+      <ion-col col-6 class="height-100" (click)="startDateTime('ContraceptiveMethods');">
+          <ion-card class="cl2 height100">
+            <ion-card-content class="height100">
+              <ion-row justify-content-center align-items-center class="height100">
+                <ion-col col-12 class="height-100p">
+                  <div class="cdiv">
+                      <p>
+                          <img src="assets/imgs/counceling.png" class="img3" />
+                      </p>
+                      <div class="txt-content">
+                        <span float-left>IUCD</span>
+                        <span float-right>
+                            <ion-icon name="arrow-round-forward"></ion-icon>
+                        </span>
+                      </div>
+                  </div>
+                </ion-col>
+              </ion-row>
+            </ion-card-content>
+          </ion-card>
+      </ion-col>
+      <ion-col col-6 class="height-100">
+          <ion-card class="cl3 height100">
+            <ion-card-content class="height100">
+              <ion-row justify-content-center align-items-center class="height100">
+                <ion-col col-12 class="height-100p">
+                 <div class="cdiv">
+                    <p>
+                        <img src="assets/imgs/counceling.png" class="img3" />
+                    </p>
+                    <div class="txt-content">
+                      <span float-left>COC</span>
+                      <span float-right>
+                          <ion-icon name="arrow-round-forward"></ion-icon>
+                      </span>
+                    </div>
+                 </div>
+                </ion-col>
+              </ion-row>
+            </ion-card-content>
+          </ion-card>
+      </ion-col>
+      <ion-col col-6 class="height-100">
+          <ion-card class="cl4 height100">
+            <ion-card-content class="height100">
+              <ion-row justify-content-center align-items-center class="height100">
+                <ion-col col-12 class="height-100p">
+                 <div class="cdiv">
+                    <p>
+                        <img src="assets/imgs/counceling.png" class="img3" />
+                    </p>
+                    <div class="txt-content">
+                      <span float-left>CENTCHROMAN</span>
+                      <span float-right>
+                          <ion-icon name="arrow-round-forward"></ion-icon>
+                      </span>
+                    </div>
+                 </div>
+                </ion-col>
+              </ion-row>
+            </ion-card-content>
+          </ion-card>
+      </ion-col>
+      <ion-col col-6 class="height-100">
+        <ion-card class="cl5 height100">
+          <ion-card-content class="height100">
+            <ion-row justify-content-center align-items-center class="height100">
+              <ion-col col-12 class="height-100p">
+               <div class="cdiv">
+                  <p>
+                      <img src="assets/imgs/dashboard-icons/couselling-icon.png" class="img3" />
+                  </p>
+                  <div class="txt-content">
+                    <span float-left>CONDOM</span>
+                    <span float-right>
+                        <ion-icon name="arrow-round-forward"></ion-icon>
+                    </span>
+                  </div>
+               </div>
+              </ion-col>
+            </ion-row>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+      <ion-col col-6 class="height-100">
+          <ion-card class="cl6 height100">
+            <ion-card-content class="height100">
+              <ion-row justify-content-center align-items-center class="height100">
+                <ion-col col-12 class="height-100p">
+                <div class="cdiv">
+                    <p>
+                        <img src="assets/imgs/dashboard-icons/couselling-icon.png" class="img3" />
+                    </p>
+                    <div class="txt-content">
+                      <span float-left>ECP</span>
+                      <span float-right>
+                          <ion-icon name="arrow-round-forward"></ion-icon>
+                      </span>
+                    </div>
+                </div>
+                </ion-col>
+              </ion-row>
+            </ion-card-content>
+          </ion-card>
+      </ion-col>
+    </ion-row>
 
-    <!-- <ion-grid class="width-100" *ngIf="languageId=='1'">
-        <ion-row text-center>
-            <ion-col col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 text-center no-padding>
-                <h4 class="purple" no-margin margin-top> SPACING</h4>
-            </ion-col>
-        </ion-row>
-        <ion-row class="border-bottom">
 
-            <ion-col col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4>
-                <img src="{{iucd}}" (click)="gotoTopicsListPage('1');">
-            </ion-col>
-            <ion-col col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4>
-                <img src="{{dmpa}}" (click)="gotoTopicsListPage('2');">
-            </ion-col>
-            <ion-col col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4>
-                <img src="{{coc}}" (click)="gotoTopicsListPage('3');">
-            </ion-col>
-
-            <ion-col col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4>
-                <img src="{{ecp}}" (click)="gotoTopicsListPage('4');">
-            </ion-col>
-            <ion-col col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4>
-                <img src="{{centchroman}}" (click)="gotoTopicsListPage('5');">
-            </ion-col>
-
-            <ion-col col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4>
-                <img src="{{condom}}" (click)="gotoTopicsListPage('8');">
-            </ion-col>
-        </ion-row>
-        <ion-row text-center>
-            <hr/>
-            <ion-col col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 text-center no-padding>
-                <h4 class="purple" no-margin margin-top> LIMITING</h4>
-            </ion-col>
-        </ion-row>
-        <ion-row>
-            <ion-col col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4>
-                <img src="{{male_stre}}" (click)="gotoTopicsListPage('6');">
-            </ion-col>
-
-            <ion-col col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4>
-                <img src="{{female_stre}}" (click)="gotoTopicsListPage('7');">
-            </ion-col>
-            <ion-col col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4>
-                <img src="{{mascotImg}}" style="margin-top: -30px;">
-            </ion-col>
-        </ion-row>
-
-    </ion-grid> -->
-
-    <!-- <ion-grid class="width-100" *ngIf="languageId=='2'">
-        <ion-row text-center>
-            <ion-col col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 text-center no-padding>
-                <h4 class="purple" no-margin margin-top> SPACING</h4>
-            </ion-col>
-        </ion-row>
-        <ion-row class="border-bottom">
-            <ion-col col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4>
-                <img src="assets/methods/iucd-hindi-icon.png" (click)="gotoTopicsListPage('9');">
-            </ion-col>
-            <ion-col col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4>
-                <img src=" assets/methods/dmpa-hindi-icon.png" (click)="gotoTopicsListPage('10');">
-            </ion-col>
-            <ion-col col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4>
-                <img src="assets/methods/coc-hindi-icon.png" (click)="gotoTopicsListPage('11');">
-            </ion-col>
-            <ion-col col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4>
-                <img src="assets/methods/ECP-hindi-icon.png" (click)="gotoTopicsListPage('12');">
-            </ion-col>
-            <ion-col col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4>
-                <img src="assets/methods/centchroman-hindi-icon.png" (click)="gotoTopicsListPage('13');">
-            </ion-col>
-            <ion-col col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4>
-                <img src="assets/methods/condom-hindi-icon.png" (click)="gotoTopicsListPage('16');">
-            </ion-col>
-
-        </ion-row>
-        <ion-row text-center>
-            <hr/>
-            <ion-col col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 text-center no-padding>
-                <h4 class="purple" no-margin margin-top> LIMITING</h4>
-            </ion-col>
-        </ion-row>
-        <ion-row>
-            <ion-col col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4>
-                <img src="assets/methods/male-sterilization-hindi-icon.png " (click)="gotoTopicsListPage('14');">
-            </ion-col>
-            <ion-col col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4>
-                <img src="assets/methods/female-sterilization-hindi-icon.png" (click)="gotoTopicsListPage('15');">
-            </ion-col>
-            <ion-col col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4 style="margin-top: -30px;">
-                <img src="{{mascotImg}}">
-            </ion-col>
-        </ion-row>
-
-    </ion-grid> -->
-    <ion-grid class="width-100" >
-        <ion-row text-center>
-            <ion-col col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 text-center no-padding>
-                <h4 class="purple" no-margin margin-top> SPACING</h4>
-            </ion-col>
-        </ion-row>
-        <ion-row class="border-bottom"   text-wrap>
-
-            <!-- <ion-col col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4 *ngFor="let getMethods of spacingMethod" (click)="gotoTopicsListPage(getMethods.MethodId)">
-                <img src="{{getMethods.MobileIconURL}}" >
-            </ion-col> -->
-            <ion-col col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4 (click)="gotoTopicsListPageTest(1001)">
-              <img src="assets/methods/dmpa-icon_old.png" >
-            </ion-col>
-        </ion-row>
-    </ion-grid>
-
-    <ion-grid class="width-100"  >
-        <ion-row text-center>
-            <ion-col col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 text-center no-padding>
-                <h4 class="purple" no-margin margin-top> LIMITING</h4>
-            </ion-col>
-        </ion-row>
-        <ion-row class="border-bottom"  text-wrap>
-
-            <ion-col col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4  *ngFor="let getMethods of limitingMethod" (click)="gotoTopicsListPage(getMethods.MethodId)">
-                <img src="{{getMethods.MobileIconURL}}" >
-            </ion-col>
-            <ion-col col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4 style="margin-top: -30px;">
-                <img src="{{mascotImg}}">
-            </ion-col>
-        </ion-row>
+  </ion-grid>
+  <ion-grid>
+      <ion-row text-center>
+          <ion-col col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 no-padding>
+              <h4 class="txtalignstart" no-margin margin-top>LIMITING</h4>
+          </ion-col>
+      </ion-row>
+      <ion-row justify-content-center align-items-center class="height100">
+          <ion-col col6 class="height-100">
+            <ion-card class="cl7 height100">
+              <ion-card-content class="height100">
+                <ion-row justify-content-center align-items-center class="height100">
+                  <ion-col col-12>
+                    <div class="cdiv">
+                        <p>
+                            <img src="assets/imgs/counceling.png" class="img3" />
+                        </p>
+                        <div class="txt-content">
+                          <span float-left>MALE STERILIZATION</span>
+                          <span float-right>
+                              <ion-icon name="arrow-round-forward"></ion-icon>
+                          </span>
+                        </div>
+                    </div>
+                  </ion-col>
+                </ion-row>
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+          <ion-col col-6 class="height-100" (click)="startDateTime('ContraceptiveMethods');">
+              <ion-card class="cl8 height100">
+                <ion-card-content class="height100">
+                  <ion-row justify-content-center align-items-center class="height100">
+                    <ion-col col-12>
+                      <div class="cdiv">
+                          <p>
+                              <img src="assets/imgs/counceling.png" class="img3" />
+                          </p>
+                          <div class="txt-content">
+                            <span float-left>FEMALE STERILIZATION</span>
+                            <span float-right>
+                                <ion-icon name="arrow-round-forward"></ion-icon>
+                            </span>
+                          </div>
+                      </div>
+                    </ion-col>
+                  </ion-row>
+                </ion-card-content>
+              </ion-card>
+          </ion-col>
+      </ion-row>
     </ion-grid>
 </ion-content>
-<ion-footer>
-    <ion-grid class="footer_Grid">
-        <ion-row>
-            <ion-col col-6>
-                <img src="assets/imgs/back.png" height="35px" (click)="gotoDashboard();">
-                <!-- <ion-icon  class="footer-Icon" name="md-arrow-back" (click)="gotoDashboard();"></ion-icon> -->
-            </ion-col>
-            <ion-col col-6>
-                <!-- <div float-right (click)=changeLanguage(chooseLanguage)><img class="footer_language_icon" [src]="languageIcon"></div> -->
-            </ion-col>
-        </ion-row>
-    </ion-grid>
-</ion-footer>
